removed margin from card which caused the spacing bug

--- a/Front-end/nationinfo/src/Card.css
+++ b/Front-end/nationinfo/src/Card.css
@@ -5,7 +5,6 @@
     width:10%;
     border-radius: 10px;
     padding:1px;
-    margin:.5rem;
 }
 
 .card:hover {
